tests/borrowck/valid/borrow_scope_end.vit
space tests/borrowck/valid/borrow_scope_end

proc make_box() -> Box {
  give Box { value: 1 };
}

form Box {
  value: int
}

proc main() -> Box {
  let value = make_box();
  if true {
    let view = &value;
    let keep = 0;
  }
  set value = make_box();
  give value;
}
