tests/borrowck/invalid/write_while_borrowed.vit
space tests/borrowck/invalid/write_while_borrowed

proc make_box() -> Box {
  give Box { value: 1 };
}

form Box {
  value: int
}

proc main() -> Box {
  let value = make_box();
  let view = &value;
  set value = make_box();
  give value;
}
